static/css/index.css
/* index.css for Kodori's website */
/* by Alice Wonder (TG: ArisuChr) */
body {
	background-color: #222;
	background: url('https://static.nekolover.ml/resources/images/background.jpg') no-repeat fixed;
	background-size: cover;
	background-position-y: bottom;
	color: aliceblue;
	text-align: center;
	font-size: 14px;
	line-height: 1.5;
	font-family: 'Alegreya Sans', sans-serif;
}

main {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    overflow: auto;
}

#content {
    width: 250px;
    height: 500px;
    background: #111;
    border-radius: 10px;
    padding: 10px;
    position: absolute;
    top: 0;
    right: 0;
    bottom: -10%;
    left: 0;
    margin: auto;
}
#icon {
	width: 120px;
	height: 120px;
	background-color: black;
	background: url('../img/logo.jpg') no-repeat;
	background-size: cover;
	border-radius: 50%;
	border: 5px solid #111;
	position: relative;
	left: 25%;
	top: -13%;
}
h1 {
	margin-top: -22%;
}
#user-info p {
	margin-top: 8px;
	margin-bottom: 8px;
}
#links {
	width: 210px;
	position: relative;
	bottom: -6%;
	left: 7%;
	display: flex;
	flex-wrap: wrap;
	justify-content: space-evenly;
	font-size: 1.5em;
}
#links a {
	color: aliceblue;
	text-decoration: none;
}
#links a:hover {
	color: #d42a52;
}

